# ai-collab

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ai-collab.toml.example  ai_collab_cli.py  ai_collab_tui.py  brainstorm_cli.py  brainstorm_db.py  brainstorm_seeds.py  brainstorm_server.py  brainstorm_service.py  brainstorm_tools.py  config.py  dashboard.html  dashboard.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
crates/ai-collab-config/: Cargo.toml
crates/ai-collab-config/src/: defaults.rs  lib.rs  loader.rs  types.rs
crates/ai-collab-core/: Cargo.toml
crates/ai-collab-core/src/: enums.rs  error.rs  ids.rs  lib.rs  models.rs  traits.rs  validation.rs
crates/ai-collab-db/: Cargo.toml
crates/ai-collab-db/src/: lib.rs  queries.rs  schema.rs  seeds.rs
crates/ai-collab-provider/: Cargo.toml
crates/ai-collab-provider/src/: generic.rs  lib.rs  registry.rs
crates/ai-collab-server/: Cargo.toml
crates/ai-collab-server/src/: agent_server.rs  main.rs  server.rs  validator.rs
docs/superpowers/plans/: 2026-03-13-ratatui-tui-migration.md  2026-03-22-audit-fixes.md
providers/: __init__.py  base.py  claude.py  codex.py  copilot.py  errors.py  gemini.py  generic.py
tests/: test_brainstorm_db.py  test_cli.py  test_config.py
tui/: Cargo.toml
tui/src/: app.rs  colors.rs  db.rs  lib.rs  main.rs  render.rs  ui.rs
tui/tests/: app_test.rs  db_test.rs  render_test.rs
