[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-collab"
version = "0.1.0"
description = "Multi-AI collaboration MCP server — orchestrate brainstorming sessions across Claude, Copilot, Gemini, Codex, and any CLI-based AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cem" },
]
keywords = ["mcp", "ai", "collaboration", "brainstorm", "copilot", "gemini", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
tui = [
    "textual>=0.40.0",
]
dev = [
    "pytest",
    "ruff",
]
all = [
    "ai-collab[tui]",
]

[project.scripts]
ai-collab = "ai_collab_cli:main"
ai-collab-tui = "ai_collab_tui:main"

[tool.hatch.build.targets.wheel]
packages = [
    "providers",
]
# Top-level modules to include (hatch force-include)
[tool.hatch.build.targets.wheel.force-include]
"mcp_server.py" = "mcp_server.py"
"brainstorm_server.py" = "brainstorm_server.py"
"brainstorm_db.py" = "brainstorm_db.py"
"brainstorm_seeds.py" = "brainstorm_seeds.py"
"brainstorm_cli.py" = "brainstorm_cli.py"
"config.py" = "config.py"
"ai_collab_cli.py" = "ai_collab_cli.py"
"ai_collab_tui.py" = "ai_collab_tui.py"
