[package]
name = "ai-collab-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-collab-tui"
path = "src/main.rs"

[lib]
name = "ai_collab_tui"
path = "src/lib.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
