[package]
name = "ai-collab-db"
version.workspace = true
edition.workspace = true

[dependencies]
ai-collab-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
